[package]
name = "textgenturbo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
colorgrad = "0.7.0"
rand = "0.8.5"
xorwowgen = "0.4.0"
bevy_capture = { version = "0.1.1", features = ["mp4_openh264"]}
noise = "0.9.0"
image = "0.25.5"
meshtext = "0.3.1"
clap = { version = "4.5.21", features = ["derive"] }
